# columns

./: columns.py  columns.sh  meson.build  meson.options  setup_meson.sh
include/: columns.h
src/: columns.c  main.py  plugin_stub.py
tests/: kind.c  kind.cpp  messages.h  messages_def.c  messages_def.h  plugin.py  setup.sh  test1.cpp  test2.c  test3.cpp
